@@ -7,6 +7,7 @@ VERSION 2.9.90
   FEATURES:
    * Added a visual hint that context view applets can be resized in edit mode.
    * Display missing metadata errors in Wikipedia applet UI.
+   * Add a button to stop automatic Wikipedia page updating. (BR 485813)
 
   CHANGES:
    * Replace defunct lyricwiki with lyrics.ovh as lyrics provider for now. (BR 455937)
